[tool.poetry]
name = "blockchain-fastapi"
version = "0.1.0"
description = "A basic blockchain implemented with FastAPI"
authors = ["Brice Boudehent"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.68.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
