[tool.poetry]
name = "blockchain-fastapi"
version = "0.1.0"
description = "A basic blockchain implemented with FastAPI"
authors = ["Brice Boudehent"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.68.1"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]
black = "^21.9b0"
pylint = "^2.11.1"
mypy = "^0.910"
pre-commit = "^2.15.0"
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
